--- a/desafio05/css/estilo.css
+++ b/desafio05/css/estilo.css
@@ -1,5 +1,15 @@
 @charset "UTF-8";
 
+
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+
+
+:root {
+    --fonte1: 'Passion One', cursive;
+    --fonte2: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte3:Sriracha, cursive;
+}
+
 *{
     margin: 0px;
     padding: 0px;
@@ -8,6 +18,7 @@
 html,body{
     background-color: #ccc;
     min-height: 100vh;
+    font-family: var(--fonte2);
 }
 header {
     background-color: black;
@@ -17,6 +28,8 @@ header {
 header > h1{
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--fonte1);
+    font-size: 4em;
 
 }
 header > p{
@@ -35,7 +48,13 @@ section{
     padding-top: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 3.5vw;
 }
+section > p{
+    padding-bottom: 2em;
+}
+
 section.normal{
     background-color: rgb(255, 255, 255);
     color: black;
@@ -43,11 +62,29 @@ section.normal{
 section.imagem{
     background-color: #424242;
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.473);
+    background-size: cover;
+    background-attachment: fixed;
+
 }
 section.imagem > p{
-    width: 400px;
-    background-color: #333333;
+    background-color: rgba(0, 0, 0, 0.377);
+    display: inline-block;
+    padding: 10px;
+    text-shadow: 2px 1px 0px black;
 }
+section#img01{
+    background-image: url('/desafio05/img/background001.jpg');
+    background-position: right center;
+    background-size: cover;
+    
+}
+section#img02{
+    background-image: url('/desafio05/img/background002.jpg');
+    background-position: right center;
+    background-size: cover;
+}
+
 footer{
     background-color: black;
     color: white;
